Get orderId that was created by a user

--- a/FoodOrder/nbproject/project.properties
+++ b/FoodOrder/nbproject/project.properties
@@ -33,12 +33,22 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/FoodOrder
 excludes=
+file.reference.B_o_Kh_nh-sqljdbc_10.2.1.0_enu=C:\\Users\\tienm\\OneDrive\\M\u00e1y t\u00ednh\\B\u1ea3o Kh\u00e1nh\\sqljdbc_10.2.1.0_enu
+file.reference.gson-2.9.0.jar=C:\\Users\\tienm\\OneDrive\\M\u00e1y t\u00ednh\\B\u1ea3o Kh\u00e1nh\\jar_files\\gson-2.9.0.jar
+file.reference.mssql-jdbc-10.2.1.jre11.jar=C:\\Users\\tienm\\OneDrive\\M\u00e1y t\u00ednh\\B\u1ea3o Kh\u00e1nh\\sqljdbc_10.2.1.0_enu\\sqljdbc_10.2\\enu\\mssql-jdbc-10.2.1.jre11.jar
 file.reference.mssql-jdbc-10.2.1.jre17.jar=E:\\NetWork\\sqljdbc_10.2.1.0_enu\\sqljdbc_10.2\\enu\\mssql-jdbc-10.2.1.jre17.jar
+file.reference.mssql-jdbc-10.2.1.jre17.jar-1=..\\sqljdbc_10.2.1.0_enu\\sqljdbc_10.2\\enu\\mssql-jdbc-10.2.1.jre17.jar
+file.reference.mssql-jdbc-10.2.1.jre8.jar=C:\\Users\\tienm\\OneDrive\\M\u00e1y t\u00ednh\\B\u1ea3o Kh\u00e1nh\\sqljdbc_10.2.1.0_enu\\sqljdbc_10.2\\enu\\mssql-jdbc-10.2.1.jre8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MyLibrary.classpath}:\
-    ${file.reference.mssql-jdbc-10.2.1.jre17.jar}
+    ${file.reference.mssql-jdbc-10.2.1.jre17.jar}:\
+    ${file.reference.gson-2.9.0.jar}:\
+    ${file.reference.B_o_Kh_nh-sqljdbc_10.2.1.0_enu}:\
+    ${file.reference.mssql-jdbc-10.2.1.jre11.jar}:\
+    ${file.reference.mssql-jdbc-10.2.1.jre8.jar}:\
+    ${file.reference.mssql-jdbc-10.2.1.jre17.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -64,6 +74,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.B_o_Kh_nh-sqljdbc_10.2.1.0_enu=../sqljdbc_10.2.1.0_enu
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -94,5 +105,6 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
+source.reference.B_o_Kh_nh-sqljdbc_10.2.1.0_enu=../sqljdbc_10.2.1.0_enu
 src.dir=src
 test.src.dir=test
