--- a/FoodOrder/nbproject/project.properties
+++ b/FoodOrder/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/FoodOrder
 excludes=
 file.reference.B_o_Kh_nh-sqljdbc_10.2.1.0_enu=C:\\Users\\tienm\\OneDrive\\M\u00e1y t\u00ednh\\B\u1ea3o Kh\u00e1nh\\sqljdbc_10.2.1.0_enu
+file.reference.gson-2.8.2.jar=..\\jar_files\\gson-2.8.2.jar
 file.reference.gson-2.9.0.jar=C:\\Users\\tienm\\OneDrive\\M\u00e1y t\u00ednh\\B\u1ea3o Kh\u00e1nh\\jar_files\\gson-2.9.0.jar
 file.reference.mssql-jdbc-10.2.1.jre11.jar=C:\\Users\\tienm\\OneDrive\\M\u00e1y t\u00ednh\\B\u1ea3o Kh\u00e1nh\\sqljdbc_10.2.1.0_enu\\sqljdbc_10.2\\enu\\mssql-jdbc-10.2.1.jre11.jar
 file.reference.mssql-jdbc-10.2.1.jre17.jar=E:\\NetWork\\sqljdbc_10.2.1.0_enu\\sqljdbc_10.2\\enu\\mssql-jdbc-10.2.1.jre17.jar
@@ -48,7 +49,8 @@ javac.classpath=\
     ${file.reference.B_o_Kh_nh-sqljdbc_10.2.1.0_enu}:\
     ${file.reference.mssql-jdbc-10.2.1.jre11.jar}:\
     ${file.reference.mssql-jdbc-10.2.1.jre8.jar}:\
-    ${file.reference.mssql-jdbc-10.2.1.jre17.jar-1}
+    ${file.reference.mssql-jdbc-10.2.1.jre17.jar-1}:\
+    ${file.reference.gson-2.8.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
